Signup link added

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
     <div class="mycard">
         <h3 class="form-title">Sign in to Digipodium</h3>
-        <span>New Here? <a href="SignUp.html">Create an account</a></span>
+        <span>New Here? <a href="https://aliafzalkhan.github.io/Signup/">Create an account</a></span>
 
         <form class="my-form">
             <label>Email</label>
