--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 <body>
 
     <div class="mycard">
-        <h3 class="form-title">Sign in to Digipodium</h3>
+        <h3 class="form-title">Sign in</h3>
         <span>New Here? <a href="https://aliafzalkhan.github.io/Signup/">Create an account</a></span>
 
         <form class="my-form">
